Post merge fixes